...
    PLSOL("PLSOL", "Requested Boost",
        platforms = setOf(EcuPlatform.ME7, EcuPlatform.MED9, EcuPlatform.MED17)),
    KFMIOP("KFMIOP", "KFMIOP Calculator",
        labelOverrides = mapOf(EcuPlatform.MED17 to "KFLMIOP", EcuPlatform.MOTRONIC to "KFMDOPT")),
    KFMIRL("KFMIRL", "KFMIRL Calculator",
        platforms = setOf(EcuPlatform.ME7, EcuPlatform.MED9, EcuPlatform.MED17),
        labelOverrides = mapOf(EcuPlatform.MED17 to "KFLMIRL")),
    KFZWOP("KFZWOP", "KFZWOP Calculator",
        labelOverrides = mapOf(EcuPlatform.MOTRONIC to "KFZWOPT")),
    KFZW("KFZW", "KFZW Calculator"),
    KFVPDKSD("KFVPDKSD/E", "KFVPDKSD/E Calculator",
        platforms = setOf(EcuPlatform.ME7, EcuPlatform.MED9),
        labelOverrides = mapOf(EcuPlatform.MED9 to "KFVPDKLD")),
...
